--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemap": "^1.0.1",
+    "gulp-sourcemaps": "^3.0.0",
     "imagemin": "^7.0.1",
     "postcss": "^8.1.14"
   }
